fix alignment of ul/lis

--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ strong {
 
 .entry > ul li {
   list-style-type: square;
+  margin-left: 40px;
 }
 
 /* **************************************
